--- a/南沙图书馆/src/index.html
+++ b/南沙图书馆/src/index.html
@@ -34,57 +34,222 @@
 				</div>
 			</div>
 		</div>
+			  
 		<div class="home-pager">
-			<div class="full-page-item">
-				<div class="wrap">
-					<div class="home-search-bar page-item page-item-first-1">
-						<div class="tabs">
-							<a href="javascript:;" class="active">馆藏检索</a>
-							<a href="javascript:;">站内检索</a>
-						</div>
-						<div class="tabs-content">
-							<select name="" id=""></select>
-							<select name="" id=""></select>
-							<input type="text" />
-							<button>检索</button>
-						</div>
-					</div>
-					<div class="home-notice page-item page-item-first-2">
-						<div class="list">
-							<div class="item">
-								<div class="pull-right">
-									更多
+			<div class="full-page-item full-1">
+				<div class="wrap wrap-page-1">
+					<div class="page-item-absolute home-search">
+						<div class="home-search-bar">
+							<div class="tabs">
+								<a href="javascript:;" class="active">馆藏检索</a>
+								<a href="javascript:;">站内检索</a>
+							</div>
+							<div class="tabs-content clearfix">
+								<div class="item">
+									<select name="" class="dir-select" data-width="110px">
+										<option value="">书目检索</option>
+										<option value="">分类1-2</option>
+										<option value="">分类1-3</option>
+									</select>
 								</div>
-								<i class="icon icon-notice"></i>
-								名师助力！羊城少年学堂讲座之如何做好幼小衔接的准备，开讲啦！
+								<div class="item">
+									<select name="" class="dir-select" data-width="110px">
+										<option value="">分类</option>
+										<option value="">分类2-2</option>
+										<option value="">分类2-3</option>
+									</select>
+								</div>
+								<div class="item">
+									<div class="input-group">
+										<input type="text" class="form-control" placeholder="请输入书名或作者">
+										<span class="input-group-btn">
+											<button class="btn btn-default" type="button">检索</button>
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="home-notice">
+							<div class="list">
+								<div class="item">
+									<div class="pull-right">
+										<a href="#" class="more">更多</a>
+									</div>
+									<i class="icon icon-notice"></i>
+									最新公告：
+									<a href="#" class="ml10">名师助力！羊城少年学堂讲座之如何做好幼小衔接的准备，开讲啦！</a>
+								</div>
 							</div>
 						</div>
 					</div>
-					<a href="#" class="home-navigation">
-						<img src="./assets/images/home-3d.png" alt="" />
-					</a>
+					<div class="page-item-absolute home-navigation">
+						<a href="#">
+							<img src="./assets/images/home-map-nav.png" alt="" />
+						</a>
+					</div>
 				</div>
 			</div>
-			<div class="full-page-item">
+			<div class="full-page-item full-2 hide">
 				<div class="wrap">
-					<div class="home-calendar"></div>
+					<div class="home-calendar">
+						<div class="calendar-title">
+							<strong>10</strong> 月活动安排
+						</div>
+						<div class="calendar-list">
+							<div class="list-header clearfix">
+								<div class="item">周日</div>
+								<div class="item">周一</div>
+								<div class="item">周二</div>
+								<div class="item">周三</div>
+								<div class="item">周四</div>
+								<div class="item">周五</div>
+								<div class="item">周六</div>
+							</div>
+							<div class="list-body clearfix">
+								<div class="item item-disabled">
+									29
+								</div>
+								<div class="item item-disabled">
+									30
+								</div>
+								<div class="item item-disabled">
+									31
+								</div>
+								<div class="item">
+									1
+								</div>
+								<div class="item">
+									2
+								</div>
+								<div class="item">
+									3
+								</div>
+								<div class="item">
+									4
+								</div>
+								<div class="item">
+									<a href="#">
+										<i class="icon icon-point-primary"></i>
+										5
+									</a>
+								</div>
+								<div class="item">
+									6
+								</div>
+								<div class="item">
+									7
+								</div>
+								<div class="item">
+									<a href="#">
+										<i class="icon icon-point-primary"></i>
+										8
+									</a>
+								</div>
+								<div class="item item-today">
+									9
+									<div class="tody">
+										今天
+									</div>
+								</div>
+								<div class="item">
+									10
+								</div>
+								<div class="item">
+									11
+								</div>
+								<div class="item">
+									12
+								</div>
+								<div class="item">
+									13
+								</div>
+								<div class="item">
+									<a href="#">
+										<i class="icon icon-point-primary"></i>
+										14
+									</a>
+								</div>
+								<div class="item">
+									15
+								</div>
+								<div class="item">
+									16
+								</div>
+								<div class="item">
+									17
+								</div>
+								<div class="item">
+									<a href="#">
+										<i class="icon icon-point-primary"></i>
+										18
+									</a>
+								</div>
+								<div class="item">
+									19
+								</div>
+								<div class="item">
+									20
+								</div>
+								<div class="item">
+									21
+								</div>
+								<div class="item">
+									22
+								</div>
+								<div class="item">
+									23
+								</div>
+								<div class="item">
+									24
+								</div>
+								<div class="item">
+									25
+								</div>
+								<div class="item">
+									26
+								</div>
+								<div class="item">
+									27
+								</div>
+								<div class="item">
+									28
+								</div>
+								<div class="item">
+									29
+								</div>
+								<div class="item">
+									30
+								</div>
+								<div class="item">
+									1
+								</div>
+								<div class="item">
+									2
+								</div>
+							</div>
+							<div class="list-footer mt10">
+								<i class="icon icon-point-primary icon-point-primary-lg"></i> 有活动 
+							</div>
+						</div>
+					</div>
 					<div class="home-notice-thumbs">
 						<div class="box-title">
 							<div class="pull-right">
-								<i class="icon icon-more"></i> 更多
+								<i class="icon icon-more">+</i> 更多
 							</div>
-							<i class="icon icon-notice"></i> 最新活动公告
+							<i class="icon icon-notice-title"></i> 最新活动公告
 						</div>
 						<div class="list">
 							<div class="item">
 								<div class="img">
-									<img src="./assets/images/p10.png" alt="" />
+									<a href="#"><img src="./assets/images/p17.png" alt="" /></a> 
 								</div>
 								<div class="item-title">
-									唐宋诗词粤语讲座第十一讲：唐代广东诗人唐代广东诗人唐代广东诗人张九龄及其在中国诗史 
+									唐宋诗词粤语讲座第十一讲：唐代广东诗人唐代广东
 								</div>
 								<div class="sub">
-									活动时间：2018.10.25-2018.10.31 活动地点：图书馆A号厅
+									活动时间：2018.10.25-2018.10.31 <br />
+									活动地点：图书馆A号厅
 								</div>
 								<div class="btns">
 									<a herf="#" class="btn btn-custom">立即报名</a>
@@ -92,13 +257,14 @@
 							</div>
 							<div class="item">
 								<div class="img">
-									<img src="./assets/images/p10.png" alt="" />
+									<a href="#"><img src="./assets/images/p17.png" alt="" /></a> 
 								</div>
 								<div class="item-title">
-									唐宋诗词粤语讲座第十一讲：唐代广东诗人唐代广东诗人唐代广东诗人张九龄及其在中国诗史 
+									唐宋诗词粤语讲座第十一讲：唐代广东诗史 
 								</div>
 								<div class="sub">
-									活动时间：2018.10.25-2018.10.31 活动地点：图书馆A号厅
+									活动时间：2018.10.25-2018.10.31 <br />
+									活动地点：图书馆A号厅
 								</div>
 								<div class="btns">
 									<a herf="#" class="btn btn-custom">立即报名</a>
@@ -106,54 +272,70 @@
 							</div>
 							<div class="item">
 								<div class="img">
-									<img src="./assets/images/p10.png" alt="" />
+									<a href="#"><img src="./assets/images/p17.png" alt="" /></a> 
 								</div>
 								<div class="item-title">
 									唐宋诗词粤语讲座第十一讲：唐代广东诗人唐代广东诗人唐代广东诗人张九龄及其在中国诗史 
 								</div>
 								<div class="sub">
-									活动时间：2018.10.25-2018.10.31 活动地点：图书馆A号厅
+									活动时间：2018.10.25-2018.10.31 <br />
+									活动地点：图书馆A号厅
 								</div>
 								<div class="btns">
 									<a herf="#" class="btn btn-custom">立即报名</a>
 								</div>
 							</div>
 						</div>
-						<div class="home-video">
-							<div class="clearfix">
-								<div class="left">
-									<div class="box-title">
-										<div class="pull-right">
-											<i class="icon icon-more"></i> 更多
-										</div>
-										<i class="icon icon-pic"></i> 剪影展示
+					</div>
+					<div class="home-video">
+						<div class="clearfix">
+							<div class="left">
+								<div class="box-title">
+									<div class="pull-right">
+										<i class="icon icon-more">+</i> 更多
 									</div>
-									<div class="list">
-										<div class="item"></div>
-										<div class="item"></div>
-										<div class="item"></div>
+									<i class="icon icon-pic"></i> 剪影展示
+								</div>
+								<div class="list">
+									<i class="icon icon-swiper-arrow-left"></i>
+									<i class="icon icon-swiper-arrow-right"></i>
+
+									<div class="item">
+										<a href="#">
+											<img src="./assets/images/p15.png" alt="" />
+										</a>
+									</div>
+									<div class="item">
+										<a href="#">
+											<img src="./assets/images/p15.png" alt="" />
+										</a>
+									</div>
+									<div class="item">
+										<a href="#">
+											<img src="./assets/images/p15.png" alt="" />
+										</a>
 									</div>
 								</div>
-								<div class="right">
-									<div class="box-title">
-										<div class="pull-right">
-											<i class="icon icon-more"></i> 更多
-										</div>
-										<i class="icon icon-play-title"></i> 视频播放
+							</div>
+							<div class="right">
+								<div class="box-title">
+									<div class="pull-right">
+										<i class="icon icon-more">+</i> 更多
 									</div>
-									<div class="list">
-										<div class="item">
-											<a href="#">
-												<i class="icon icon-play-min"></i>
-												<img src="./assets/images/p10.png" alt="" />
-											</a>
-										</div>
-										<div class="item">
-											<a href="#">
-												<i class="icon icon-play-min"></i>
-												<img src="./assets/images/p10.png" alt="" />
-											</a>
-										</div>
+									<i class="icon icon-play-title"></i> 视频播放
+								</div>
+								<div class="list">
+									<div class="item">
+										<a href="#">
+											<i class="icon icon-play-min"></i>
+											<img src="./assets/images/p15.png" alt="" />
+										</a>
+									</div>
+									<div class="item">
+										<a href="#">
+											<i class="icon icon-play-min"></i>
+											<img src="./assets/images/p15.png" alt="" />
+										</a>
 									</div>
 								</div>
 							</div>
@@ -161,7 +343,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="full-page-item">
+			<div class="full-page-item full-3 hide">
 				<div class="wrap">
 					<div class="home-theme">
 						<div class="box-title">
@@ -333,7 +515,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="full-page-item">
+			<div class="full-page-item full-4 hide">
 				<div class="wrap">
 					<div class="home-ele-address">
 						<div class="img pull-right">
@@ -459,7 +641,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="full-page-item">
+			<div class="full-page-item full-4 hide">
 				<div class="wrap">
 					<div class="home-about">
 						<div class="left img">
@@ -511,10 +693,13 @@
 					</div>
 				</div>
 			</div>
-			<a href="javascript:;" class="global-scroll">
-				<i class="icon icon-round-arrow"></i>
-				向下滚动查看更多
-			</a>
+			<div class="global-scroll">
+				<a href="javascript:;" class="target">
+					<i class="icon icon-round-arrow"></i>
+				</a>
+				<div class="tips mt10">向下滚动查看更多</div>
+			</div>
+			
 		</div>
 	</div>
 
@@ -541,6 +726,13 @@
 			</li>
 		</ul>
 	</div>
-	
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<script src="./assets/js/bootstrap-select.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap-select.css">
+	<script>
+		$(document).ready(function(){
+			$('.dir-select').selectpicker();
+		})
+	</script>
 </body>
 </html>
